fix(bulletins): remove generation date option
